<resources>
    <!--Todo General-->
    <string name="app_name">Malbolge - Todo</string>
    <string name="default_todo">New Todo %d</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--Todo Login-->
    <string name="login_button">Login</string>
    <string name="email_NoEmail">The entered Text is not a valid Email-Address</string>
    <string name="password_Invalid">The entered Password is not valid. It has to be a Sequence of<b> 6 digits</b></string>
    <string name="LoginCheck">Checking Login-data</string>
    <string name="login_Invalid">Email or Password is not correct</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email or Username</string>
    <string name="no_connection_loginServer_check">No connection to Login Server. Accepted all Credentials.</string>
    <string name="no_connection_loginServer_signup">No connection to Login Server. Accepting all Credentials.</string>
    <string name="webservice_not_available">Webservice not available. Skipped Login.</string>

    <!--Todo List Activity-->
    <string name="todo_nameANDduedate" formatted="false">%s (%s)</string>
    <string name="ordering">ordering:</string>
    <string-array name="sort_options">
        <item>done - important - due-date</item>
        <item>done - due-date - important</item>
    </string-array>

    <!--Todo Detail Activity-->
    <string name="delete_button">Delete</string>
    <string name="save_button">Save</string>
    <string name="description_hint">Put your description in here.</string>
    <string name="detail_pick_dueDate">Due Date</string>
    <string name="detail_switch_done">Done</string>
    <string name="delete_dialog_title">Delete Todo</string>
    <string name="delete_message">Are you sure you want to <b>delete</b> this Todo?</string>

</resources>
