<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="de.thb.fbi.maus.bm.login.MainActivity">


    <TextView
        android:text="@string/email_NoEmail"
        android:textColor="@color/redAlarm"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/emailError"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:ems="10"
        android:imeOptions="actionNext"
        android:id="@+id/editText"
        android:layout_below="@+id/emailError"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:text="@string/password_Invalid"
        android:textColor="@color/redAlarm"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/passwordError"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/password_hint"
        android:maxLength="6"
        android:ems="10"
        android:imeOptions="actionDone"
        android:layout_marginTop="16dp"
        android:id="@+id/editText1"
        android:layout_below="@+id/passwordError"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:text="@string/login_button"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:id="@+id/button"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/editText1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/myTextProgress"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/LoginCheck"
        android:visibility="invisible"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:indeterminate="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/progressBar"
        android:layout_above="@+id/myTextProgress"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:text="@string/login_Invalid"
        android:textColor="@color/redAlarm"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wrongLoginData"
        android:layout_below="@+id/editText1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:text="Sign up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:id="@+id/signUp_button"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>
