<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_todo_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.thb.fbi.maus.bm.login.TodoDetail">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/detailsName"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:hint="@string/description_hint"
        android:textAlignment="textStart"
        android:ems="10"
        android:layout_below="@+id/detailsName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="60dp"
        android:id="@+id/detailsDescription"
        android:layout_alignParentEnd="true"/>

    <Button
        android:text="@string/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/buttonDelete"/>

    <Button
        android:text="@string/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/buttonSave"/>
</RelativeLayout>
